corrected fontsize in footer + spacing in pari-saclay section of index.html

--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -386,14 +386,10 @@ px      68    160    252    */
     display: block;
     width: 100%;
   }
-}
-
 /* ---------------------------------------------
 					contact close 
 ----------------------------------------------- */
-  /* --
-	footer Start 
--- */
+}
 
 /*		Wide Mobile Layout: 480px.
 		Gutters: 24px.
